fixing menu spacing

--- a/src/components/sidenavMenuItem/SidenavMenuItem.scss
+++ b/src/components/sidenavMenuItem/SidenavMenuItem.scss
@@ -17,7 +17,7 @@
 }
 
 sidenav-menu-item {
-    a { line-height: 160% }
+    a { line-height: 124% }
 }
 
 @keyframes updown {
